overflow issue

--- a/W1D3/movie.css
+++ b/W1D3/movie.css
@@ -38,7 +38,6 @@ img {
 .right-side {
   right: 0px;
   top: 0px;
-  overflow: auto;
   bottom: 0px;
   position: absolute;
   width: 246px;
